charts/media-server/chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "media"
  name: "media-ingress"
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: media.192.168.0.20.nip.io
      http:
        paths:
          - path: "/transmission"
            pathType: Prefix
            backend:
              service:
                name: "transmission-transmission-openvpn"
                port:
                  number: 80
          - path: "/sonarr"
            pathType: Prefix
            backend:
              service:
                name: "sonarr"
                port:
                  number: 80
          - path: "/radarr"
            pathType: Prefix
            backend:
              service:
                name: "radarr"
                port:
                  number: 80
          - path: "/prowlarr"
            pathType: Prefix
            backend:
              service:
                name: "prowlarr"
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "emby"
                port:
                  number: 8096
